feat: painel atualizado com status de envio e erro de e-mail

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -59,6 +59,9 @@
         <th onclick="ordenarPor('criado_em')">📥 Respondido ⬍</th>
         <th onclick="ordenarPor('data_confirmacao')">💳 Pagamento ⬍</th>
         <th onclick="ordenarPor('dataGeracao')">📄 PDF Gerado ⬍</th>
+        <th>📧 E-mail Enviado</th>
+        <th>⚠️ Erro de envio</th>
+
         <th>Ações</th>
       </tr>
     </thead>
