🚀 Atualiza upsell pós-relatório e protege variáveis sensíveis

--- a/public/pagar.html
+++ b/public/pagar.html
@@ -183,21 +183,29 @@
 
     <!-- Depoimento 1 – Natália -->
     <div class="bg-white p-5 rounded-lg shadow text-center">
-      <img src="./img/depoimentos/nat.png" alt="Natália Oliveira" class="w-20 h-20 rounded-full mx-auto mb-3 border border-gray-300" />
-      <p class="italic">“Sinceramente, achei que era só mais um teste genérico. Mas me surpreendi com a precisão. Foi direto ao ponto, me descreveu como se tivesse convivido comigo.Nunca vi nada assim. Uso até como guia pessoal.”</p>
+<picture>
+    <source srcset="./img/depoimentos/nat.webp" type="image/webp" />
+    <img src="./img/depoimentos/nat.png" alt="Natália Oliveira" class="w-20 h-20 rounded-full mx-auto mb-3 border border-gray-300" loading="lazy" />
+  </picture>      <p class="italic">“Sinceramente, achei que era só mais um teste genérico. Mas me surpreendi com a precisão. Foi direto ao ponto, me descreveu como se tivesse convivido comigo.Nunca vi nada assim. Uso até como guia pessoal.”</p>
       <p class="mt-3 font-semibold text-gray-800">— Natália Oliveira<br><span class="text-xs font-normal text-gray-500">Agente Policial</span></p>
     </div>
 
     <!-- Depoimento 2 – Marielle -->
     <div class="bg-white p-5 rounded-lg shadow text-center">
-      <img src="./img/depoimentos/marielle.png" alt="Marielle" class="w-20 h-20 rounded-full mx-auto mb-3 border border-gray-300" />
+<picture>
+    <source srcset="./img/depoimentos/marielle.webp" type="image/webp" />
+    <img src="./img/depoimentos/marielle.png" alt="Marielle" class="w-20 h-20 rounded-full mx-auto mb-3 border border-gray-300" loading="lazy" />
+  </picture>
       <p class="italic">“Como médica, sou criteriosa com qualquer coisa que mexa com o emocional. Esse diagnóstico me tocou e trouxe insights terapêuticos que nunca encontrei antes. É profundo, seguro e extremamente útil”</p>
       <p class="mt-3 font-semibold text-gray-800">— Marielle<br><span class="text-xs font-normal text-gray-500">Médica Psiquiatra Preventiva</span></p>
     </div>
 
     <!-- Depoimento 3 – Gerson -->
     <div class="bg-white p-5 rounded-lg shadow text-center">
-      <img src="./img/depoimentos/gerson.png" alt="Gerson Teles" class="w-20 h-20 rounded-full mx-auto mb-3 border border-gray-300" />
+<picture>
+    <source srcset="./img/depoimentos/gerson.webp" type="image/webp" />
+    <img src="./img/depoimentos/gerson.png" alt="Gerson Teles" class="w-20 h-20 rounded-full mx-auto mb-3 border border-gray-300" loading="lazy" />
+  </picture>
       <p class="italic">“Já vivi muita coisa, mas nunca tinha parado para olhar com tanta clareza para dentro. Esse relatório me revelou raízes que ainda influenciavam minha vida hoje. Valeu por cada linha.”</p>
       <p class="mt-3 font-semibold text-gray-800">— Gerson Teles<br><span class="text-xs font-normal text-gray-500">Empresário Aposentado</span></p>
     </div>
