--- a/public/aguarde.html
+++ b/public/aguarde.html
@@ -81,6 +81,22 @@
       color: #333;
       margin-top: 20px;
     }
+     .video-container {
+      margin-top: 40px;
+      display: none;
+    }
+
+    #botao-curso {
+      display: none;
+      margin-top: 30px;
+      font-size: 16px;
+      padding: 14px 22px;
+      background-color: #c026d3;
+      color: white;
+      font-weight: bold;
+      border-radius: 6px;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -106,7 +122,16 @@
     📩 Relatório também enviado para: <span id="email-final"></span><br />
     🔎 Verifique sua caixa de entrada e também a pasta de spam.
   </p>
-
+ <!-- Contagem + vídeo -->
+  <div class="video-container" id="video-container">
+    <p>⏳ A revelação continua…</p>
+    <p id="contador">Carregando vídeo da denúncia da alma em 20 segundos...</p>
+    <div id="video-wrapper" style="margin-top: 20px; display: none;">
+      <div style="padding:177.78% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1090623287?h=9f5dccfe7b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Convite espiritual"></iframe></div>
+      <script src="https://player.vimeo.com/api/player.js"></script>
+    </div>
+    <a href="https://pay.kiwify.com.br/KxpXn2t" id="botao-curso">🎁 Quero desbloquear minha alma agora</a>
+  </div>
   <script>
     const sessionId = new URLSearchParams(window.location.search).get("session_id");
 
@@ -174,7 +199,27 @@
         alert('Erro ao salvar o e-mail. Tente novamente.');
       });
     }
+      function iniciarContagemRevelacao() {
+      const videoContainer = document.getElementById('video-container');
+      const contador = document.getElementById('contador');
+      const videoWrapper = document.getElementById('video-wrapper');
+      const botaoCurso = document.getElementById('botao-curso');
 
+      videoContainer.style.display = 'block';
+      let tempo = 20;
+      const intervalo = setInterval(() => {
+        tempo--;
+        contador.textContent = `Carregando vídeo da denúncia da alma em ${tempo} segundos...`;
+        if (tempo <= 0) {
+          clearInterval(intervalo);
+          contador.style.display = 'none';
+          videoWrapper.style.display = 'block';
+          setTimeout(() => {
+            botaoCurso.style.display = 'inline-block';
+          }, 30000);
+        }
+      }, 1000);
+    }
     carregarInfo();
     verificarStatus();
   </script>
